--- a/assist.html
+++ b/assist.html
@@ -27,13 +27,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/assist.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Day
-  * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
-  * Updated: Mar 19 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -114,18 +108,18 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about_assist.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Votre satisfaction commence avec PELS ASSIST</h3>
+            <h3>Votre VISA s'obtient avec PELS ASSIST</h3>
             <p class="fst-italic">
-              PELS ASSIST est votre partenaire de confiance pour simplifier votre vie et répondre à tous vos besoins en matière d'assistance. Depuis notre création, nous nous engageons à fournir des services personnalisés et de haute qualité pour rendre votre quotidien plus facile.
+              PELS ASSIST est votre partenaire de confiance pour obtenir votre VISA et performer dans votre domaine d'apprentissage à travers un programme bien fourni dans le but d'acquérir l'opportunité de travailler à l'étranger. il y a de quoi à être heureux et enthousiaste !
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Nous mettons l'accent sur la satisfaction de nos clients en leur offrant des solutions sur mesure adaptées à leurs besoins spécifiques.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Notre équipe dévouée d'experts est là pour vous offrir un service de qualité, respectant les délais et votre budget.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Nous sommes constamment à la recherche d'innovations et nous utilisons les dernières technologies pour améliorer en permanence la qualité de nos services.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Mise en avant du processus de facilitation pour l'obtention de visas.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Emphase sur le programme de formation et de coaching personnalisé.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Soulignement de l'accompagnement par des experts pour une expérience sereine et réussie.</span></li>
             </ul>
           </div>
         </div>
@@ -471,14 +465,14 @@
       
             <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
               <div class="pricing-item">
-                <h3>Plan Gratuit</h3>
-                <h4><sup>$</sup>0<span> / mois</span></h4>
+                <h3>Plan Student</h3>
+                <h4><sup>€</sup>...<span> / mois</span></h4>
                 <ul>
-                  <li><i class="bi bi-check"></i> <span>Accès à notre plateforme d'assistance</span></li>
-                  <li><i class="bi bi-check"></i> <span>Assistance par email</span></li>
-                  <li><i class="bi bi-check"></i> <span>Forum d'entraide</span></li>
-                  <li class="na"><i class="bi bi-x"></i> <span>Assistance téléphonique</span></li>
-                  <li class="na"><i class="bi bi-x"></i> <span>Assistance dédiée</span></li>
+                  <li><i class="bi bi-check"></i> <span>Obtention du VISA Etudiant en Belgique</span></li>
+                  <li><i class="bi bi-check"></i> <span>Logement possible</span></li>
+                  <li><i class="bi bi-check"></i> <span>Inscription à l'Université</span></li>
+                  <li class="na"><i class="bi bi-x"></i> <span>Billet d'avion pour la Belgique</span></li>
+                  <li class="na"><i class="bi bi-x"></i> <span>Emploi garanti</span></li>
                 </ul>
                 <div class="text-center"><a href="#" class="buy-btn">Souscrire</a></div>
               </div>
@@ -487,13 +481,13 @@
             <div class="col-lg-4 featured" data-aos="zoom-in" data-aos-delay="200">
               <div class="pricing-item">
                 <h3>Plan Premium</h3>
-                <h4><sup>$</sup>49<span> / mois</span></h4>
+                <h4><sup>€</sup>...<span> / mois</span></h4>
                 <ul>
-                  <li><i class="bi bi-check"></i> <span>Assistance par email et téléphone</span></li>
-                  <li><i class="bi bi-check"></i> <span>Support dédié 24/7</span></li>
-                  <li><i class="bi bi-check"></i> <span>Réponses prioritaires</span></li>
-                  <li><i class="bi bi-check"></i> <span>Consultations personnalisées</span></li>
-                  <li><i class="bi bi-check"></i> <span>Assistance VIP</span></li>
+                  <li><i class="bi bi-check"></i> <span>Obtention du VISA travailleur en Belgique</span></li>
+                  <li><i class="bi bi-check"></i> <span>Logement possible</span></li>
+                  <li><i class="bi bi-check"></i> <span>Inscription à l'Université</span></li>
+                  <li><i class="bi bi-check"></i> <span>Billet d'avion pour la Belgique</span></li>
+                  <li><i class="bi bi-check"></i> <span>Emploi garanti</span></li>
                 </ul>
                 <div class="text-center"><a href="#" class="buy-btn">Souscrire</a></div>
               </div>
@@ -501,14 +495,14 @@
       
             <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
               <div class="pricing-item">
-                <h3>Plan Entreprise</h3>
-                <h4><sup>$</sup>99<span> / mois</span></h4>
+                <h3>Plan VIP</h3>
+                <h4><sup>€</sup>...<span> / mois</span></h4>
                 <ul>
-                  <li><i class="bi bi-check"></i> <span>Assistance personnalisée pour votre entreprise</span></li>
-                  <li><i class="bi bi-check"></i> <span>Support 24/7 pour vos employés</span></li>
-                  <li><i class="bi bi-check"></i> <span>Rapports d'utilisation détaillés</span></li>
+                  <li><i class="bi bi-check"></i> <span>Visa + Logement + Emploi</span></li>
+                  <li><i class="bi bi-check"></i> <span>Certificat de résidence</span></li>
+                  <li><i class="bi bi-check"></i> <span>RProgramme d'insertion</span></li>
                   <li><i class="bi bi-check"></i> <span>Formation et conseils</span></li>
-                  <li><i class="bi bi-check"></i> <span>Services de conciergerie premium</span></li>
+                  <li><i class="bi bi-check"></i> <span>Services de conciergerie VIP</span></li>
                 </ul>
                 <div class="text-center"><a href="#" class="buy-btn">Souscrire</a></div>
               </div>
@@ -749,7 +743,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://google.com/">DIGITAL VISION</a>
+        Designed by <a href="https://google.com/">PUB VISION</a>
       </div>
     </div>
 
