--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>GROUPE PELS</title>
+  <title>PELS IVOIRE</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -25,7 +25,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/ivoire.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Day
@@ -43,7 +43,7 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">info@groupels.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@groupels.com">info@groupels.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+225 07 49 567 951</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -61,14 +61,14 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <img src="assets/img/ok_gp1.png" alt="GROUPE PELS">
-          <h2 id="groupels" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">GROUPE PELS</h2>
+          <img src="assets/img/ok__pi.png" alt="GROUPE PELS">
+          <h2 id="groupels" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">PELS IVOIRE</h2>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="#hero" class="">Accueil</a></li>
-            <li><a href="#about">A Propos</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown has-dropdown"><a href="ivoire.html"><span>PELS IVOIRE</span> <i class="bi bi-chevron-down"></i></a>
@@ -103,13 +103,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/ivoire_bg.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-start">
           <div class="col-lg-8">
-            <h2 class="">Bienvenue au GROUPE PELS</h2>
-            <p>Découvrez nos services & projets de rénovation, de construction et de tourisme. <br>
+            <h2 class="">Bienvenue sur PELS IVOIRE</h2>
+            <p>Découvrez nos services & projets de rénovation, de construction, d'imprimerie et de tourisme. <br>
               Alors pour en savoir plus... </p>
             <a href="#about" class="btn-get-started">Commençons...</a>
           </div>
@@ -139,7 +139,7 @@
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
             <h3>Vos désirs de satisfaction commencent avec la joie d'être chez le GROUPE PELS</h3>
             <p class="fst-italic">
-              GROUPE PELS est un groupe d'entreprises spécialisées dans la construction, la rénovation, le tourisme et autres services. Depuis leur création en 2023, nos entreprises s'engagent à fournir des services de haute qualité, innovants et durables.
+              PELS IVOIRE est un groupe d'entreprises spécialisées dans la construction, la rénovation, le tourisme et L'imprimerie. Depuis leur mise en place en 2023, nous nous engageons à fournir des services de haute qualité, innovants et durables.
             </p>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Nous mettons l'accent sur la satisfaction du client en offrant des services personnalisés et adaptés à leurs besoins.</span></li>
@@ -280,9 +280,9 @@
                 <i class="bi bi-buildings"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>CONSTRUCTION</h3>
+                <h3>PELS CONSTRUCI</h3>
               </a>
-              <p>De la conception à la réalisation, nous nous empressons de réaliser les devis adéquats et les réalisations plausibles pour une finition éclatante.</p>
+              <p>Pour une finition éclatante, confiez-vous à PELS CONSTRUCI, chargée de gérer les projets de construction, de rénovation ainsi que les Projets PELS couverts par la structure.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -292,7 +292,7 @@
                 <i class="bi bi-building-gear"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>RENOVATION</h3>
+                <h3>RENOVATION by PELS</h3>
               </a>
               <p>Laissez-nous trouver le défaut et le corriger. Avec PELS, vos soucis ne sont que des souvenirs.</p>
             </div>
@@ -304,7 +304,7 @@
                 <i class="bi bi-building"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>RESIDENCES MEUBLEES</h3>
+                <h3>RESIDENCES PELS</h3>
               </a>
               <p>Profitez lors de vos séjours en Côte d'Ivoire de résidences meublées déjà disponibles afin de faciliter vos vacances.</p>
             </div>
@@ -316,7 +316,7 @@
                 <i class="bi bi-luggage"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>TOURISME</h3>
+                <h3>IVOIRE TOUR</h3>
               </a>
               <p>Découvrir la Côte d'Ivoire n'est pas seulement une aventure mais une expérience inoubliable à vivre.</p>
               <a href="#" class="stretched-link"></a>
@@ -342,9 +342,9 @@
                 <i class="bi bi-passport"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>ASSISTANCE SOCIALE</h3>
+                <h3>PROJET PELS</h3>
               </a>
-              <p>PELS ASSIST vous accompagne dans l'obtention d'un VISA en vue de poursuivre vos études et vos activités en Belgique.</p>
+              <p>Les projets PELS représentent une souscription immobilière qui vous permet d'avoir un logement à votre demande et ce en fonction de votre budget.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -493,7 +493,7 @@
 
       </div>
 
-    </section> /Portfolio Section -->
+    </section>  Portfolio Section -->
 
     <!-- Pricing Section -->
     <!--
@@ -766,17 +766,19 @@
           </ul>
         </div>
 
-        <!--
-        <div class="col-lg-4 col-md-12 footer-newsletter">
-          <h4>Our Newsletter</h4>
-          <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-          <form action="forms/newsletter.php" method="post" class="php-email-form">
-            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-          </form>
-        </div> -->
+        
+        <div class="col-lg-4 col-md-6">
+            <div class="footer-partners">
+                <h4>Partenaires</h4>
+                <ul class="partners-list">
+                    <li><a href="#"><img src="assets/img/partners/partner1.png" alt="Partenaire 1"></a></li>
+                    <li><a href="#"><img src="assets/img/partners/partner2.png" alt="Partenaire 2"></a></li>
+                    <li><a href="#"><img src="assets/img/partners/partner3.png" alt="Partenaire 3"></a></li>
+                    <!-- Ajoutez d'autres partenaires au besoin -->
+                </ul>
+            </div>
+        </div>
+         
 
       </div>
     </div>
@@ -788,7 +790,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://google.com/" target="_blank">DIGITAL VISION</a>
+        Designed by <a href="https://google.com/">DIGITAL VISION</a>
       </div>
     </div>
 
