--- a/ivoire.html
+++ b/ivoire.html
@@ -137,14 +137,14 @@
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Vos désirs de satisfaction commencent par avec la joie d'être chez le GROUPE PELS</h3>
+            <h3>Vos désirs de satisfaction commencent par la joie d'être chez PELS IVOIRE</h3>
             <p class="fst-italic">
               GROUPE PELS est un groupe d'entreprises spécialisées dans la construction, la rénovation, le tourisme et autres services. Depuis leur création en 2023, nos entreprises s'engagent à fournir des services de haute qualité, innovants et durables.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Nous mettons l'accent sur la satisfaction du client en offrant des services personnalisés et adaptés à leurs besoins.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Notre équipe d'experts qualifiés est dédiée à fournir un travail de qualité, dans les délais impartis et dans le respect du budget.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Nous croyons en l'innovation et l'utilisation des technologies les plus avancées pour améliorer nos services en terme de qualité.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Nous plaçons la satisfaction client au cœur de notre démarche, en offrant des services personnalisés qui répondent précisément aux besoins et attentes de chaque client.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Notre équipe, composée d'experts qualifiés, s'efforce de fournir des résultats exceptionnels, en respectant les délais et les contraintes budgétaires de chaque projet.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Nous adoptons les dernières innovations et technologies pour garantir des solutions durables et de haute qualité dans chacun de nos secteurs d'activité.</span></li>
             </ul>
             <!--<a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a> -->
           </div>
