--- a/ivoire.html
+++ b/ivoire.html
@@ -103,13 +103,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/ivoire_bg.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-start">
           <div class="col-lg-8">
-            <h2 class="">Bienvenue au GROUPE PELS</h2>
-            <p>Découvrez nos services & projets de rénovation, de construction et de tourisme. <br>
+            <h2 class="">Bienvenue sur PELS IVOIRE</h2>
+            <p>Découvrez nos services & projets de rénovation, de construction, d'imprimerie et de tourisme. <br>
               Alors pour en savoir plus... </p>
             <a href="#about" class="btn-get-started">Commençons...</a>
           </div>
@@ -137,14 +137,14 @@
           </div>
 
           <div class="col-lg-6 order-2 order-lg-1 content" data-aos="fade-up" data-aos-delay="200">
-            <h3>Vos désirs de satisfaction commencent par la joie d'être chez PELS IVOIRE</h3>
+            <h3>Vos désirs de satisfaction commencent avec la joie d'être chez le GROUPE PELS</h3>
             <p class="fst-italic">
-              GROUPE PELS est un groupe d'entreprises spécialisées dans la construction, la rénovation, le tourisme et autres services. Depuis leur création en 2023, nos entreprises s'engagent à fournir des services de haute qualité, innovants et durables.
+              PELS IVOIRE est un groupe d'entreprises spécialisées dans la construction, la rénovation, le tourisme et L'imprimerie. Depuis leur mise en place en 2023, nous nous engageons à fournir des services de haute qualité, innovants et durables.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Nous plaçons la satisfaction client au cœur de notre démarche, en offrant des services personnalisés qui répondent précisément aux besoins et attentes de chaque client.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Notre équipe, composée d'experts qualifiés, s'efforce de fournir des résultats exceptionnels, en respectant les délais et les contraintes budgétaires de chaque projet.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Nous adoptons les dernières innovations et technologies pour garantir des solutions durables et de haute qualité dans chacun de nos secteurs d'activité.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Nous mettons l'accent sur la satisfaction du client en offrant des services personnalisés et adaptés à leurs besoins.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Notre équipe d'experts qualifiés est dédiée à fournir un travail de qualité, dans les délais impartis et dans le respect du budget.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Nous croyons en l'innovation et l'utilisation des technologies les plus avancées pour améliorer nos services en terme de qualité.</span></li>
             </ul>
             <!--<a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a> -->
           </div>
@@ -280,9 +280,9 @@
                 <i class="bi bi-buildings"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>CONSTRUCTION</h3>
+                <h3>PELS CONSTRUCI</h3>
               </a>
-              <p>De la conception à la réalisation, nous nous empressons de réaliser les devis adéquats et les réalisations plausibles pour une finition éclatante.</p>
+              <p>Pour une finition éclatante, confiez-vous à PELS CONSTRUCI, chargée de gérer les projets de construction, de rénovation ainsi que les Projets PELS couverts par la structure.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -292,7 +292,7 @@
                 <i class="bi bi-building-gear"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>RENOVATION</h3>
+                <h3>RENOVATION by PELS</h3>
               </a>
               <p>Laissez-nous trouver le défaut et le corriger. Avec PELS, vos soucis ne sont que des souvenirs.</p>
             </div>
@@ -304,7 +304,7 @@
                 <i class="bi bi-building"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>RESIDENCES MEUBLEES</h3>
+                <h3>RESIDENCES PELS</h3>
               </a>
               <p>Profitez lors de vos séjours en Côte d'Ivoire de résidences meublées déjà disponibles afin de faciliter vos vacances.</p>
             </div>
@@ -316,7 +316,7 @@
                 <i class="bi bi-luggage"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>TOURISME</h3>
+                <h3>IVOIRE TOUR</h3>
               </a>
               <p>Découvrir la Côte d'Ivoire n'est pas seulement une aventure mais une expérience inoubliable à vivre.</p>
               <a href="#" class="stretched-link"></a>
@@ -342,9 +342,9 @@
                 <i class="bi bi-passport"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>ASSISTANCE SOCIALE</h3>
+                <h3>PROJET PELS</h3>
               </a>
-              <p>PELS ASSIST vous accompagne dans l'obtention d'un VISA en vue de poursuivre vos études et vos activités en Belgique.</p>
+              <p>Les projets PELS représentent une souscription immobilière qui vous permet d'avoir un logement à votre demande et ce en fonction de votre budget.</p>
               <a href="#" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
@@ -493,7 +493,7 @@
 
       </div>
 
-    </section> /Portfolio Section -->
+    </section>  Portfolio Section -->
 
     <!-- Pricing Section -->
     <!--
